# LTLOD

./: .env  .gitignore  CLAUDE.md  Makefile  Mokiniai.rq  Mokyklu_sarasas.rq  README.MD  README.md  docker-compose.yml  lentele.puml  mokiniai.ttl  nb-configuration.xml  pom.xml
.github/workflows/: rdf-syntax-check.yml  shacl-validation.yml
app/: .ldhignore  admin-units.ttl  import-ns.sh  install.sh  legal-entities.ttl  ns.ttl  organizations.ttl  parties.ttl  persons.ttl  root.ttl  streets.ttl  taxonomies.ttl  update-folder.sh
app/organizations/: lietuvos-respublikos-seimas.ttl
app/taxonomies/: admin-unit-levels.ttl  legal-forms.ttl  legal-statuses.ttl  org-unit-types.ttl  position-types.ttl  settlement-types.ttl  street-types.ttl
config/: dataspaces.trig  system.trig
datasets/: LTLOD examples.ttl  kandidatasDaugiamandate2012_kandidatasitem.ttl
datasets/disclosures/: interests-declaration-2012_personagreements.csv  interests-declaration-2012_personagreements.ttl  kandidatoDeklaracija2012_kandidatodeklaracija.ttl
datasets/media-links/: LTMediaLinks.ttl
datasets/organizations/: LRIstaigos20130210.ttl  LRIstaigos20130210.xml  LRIstaigos20130221.ttl
datasets/persons/: kandidatasDaugiamandate2012_kandidatasitem.csv  kandidatasDaugiamandate2012_kandidatasitem.ttl  kandidatoDeklaracija2012_kandidatodeklaracija.ttl
etl/: Makefile  ONTOLOGY-NOTES.md  URI-SCHEME.md  config.mk
etl/admin-units/: Makefile
etl/tools/: pyproject.toml
etl/tools/src/ltlod_etl/: reconcile.py  wikidata.py
etl/tools/src/ltlod_etl/scrape/: __init__.py  seimas_photos.py
(+88 files in other folders)
